Add uma mensagem sobre o downlod dos livros

--- a/index.html
+++ b/index.html
@@ -54,21 +54,22 @@
                     <li>
                         <a href="livros pdf/a-guerra-dos-tronos-george-r-r-martin-as-crc3b4nicas-de-gelo-e-fogo-conhecimentovaleouro-blogspot-com-by-viniciusf666.pdf"
                         type="aplicativo/a-guerra-dos-tronos-george-r-r-martin-as-crc3b4nicas-de-gelo-e-fogo-conhecimentovaleouro-blogspot-com-by-viniciusf666.pdf" download="a-guerra-dos-tronos-george-r-r-martin-as-crc3b4nicas-de-gelo-e-fogo-conhecimentovaleouro-blogspot-com-by-viniciusf666.pdf" target="_self">
-                            <img src="assets/guerra dos tronos.jpeg" alt="Livro guerra dos tronos" width="90px" height="120px">
+                            <img src="assets/guerra dos tronos.jpeg" alt="Livro guerra dos tronos" width="120px" height="160px">
                         </a>
                     </li>
                     <li>
                         <a href="livros pdf/percy-jackson-e-os-olimpianos_-o-ladrao-de-raios-vol-1-rick-riordan.pdf"
                         type="aplicativo/percy-jackson-e-os-olimpianos_-o-ladrao-de-raios-vol-1-rick-riordan.pdf" download="percy-jackson-e-os-olimpianos_-o-ladrao-de-raios-vol-1-rick-riordan.pdf" target="_self">
-                            <img src="assets/percy jackson.jpeg" alt="Livro percy jackson" width="90px" height="120px">
+                            <img src="assets/percy jackson.jpeg" alt="Livro percy jackson" width="120px" height="160px">
                         </a>
                     </li>
                     <li>
                         <a href="livros pdf/Codigo Limpo - Completo PT.pdf" type="aplicativo/Codigo Limpo - Completo PT.pdf" download="Codigo Limpo - Completo PT.pdf" target="_self">
-                            <img src="assets/clean code.jpeg" alt="livro clean code" width="90px" height="120px">
+                            <img src="assets/clean code.jpeg" alt="livro clean code" width="120px" height="160px">
                         </a>
                     </li>
                 </ul>
+                <p class="aviso">! Você pode baixar eles clicando na imagem !</p>
             </div>
         </section>
 
